<resources xmlnstools="http//schemas.android.com/tools">
    <string name="app_name">FisioDatos</string>
    <string name="title_activity_escalas">EscalasActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="ScaleYes">Escala Yesavage</string>
    <string name="InstrYes">
        INSTRUCCIONES\n
        Vea directamente a la persona, logres us atención y expliquele
        Le voy a hacer algunas preguntas para evaluar si estado de ánimo,
        tome en cuanta únicamente como se ha sentido durante la última semana,
        por favor responda con SÍ o NO.\n
        Hágale a la persona las preguntas de la Escala de Depresión Geriátrica en el orden indicado a continuación\n
    </string>
    <string name="InstrTin">
        OBJETIVO\n
        Determinar el factor de riesgo de caídas en el adulto mayor de manera precoz,
        dentro del año posterior a su aplicación.\n
        INSTRUCCIONES\n
        La escala cuenta con 2 partes, las cuales toman en cuenta los elementos de EQUILIBRIO y los de MARCHA.\n
        Previamente se el evaluador se le acerca al paciente con la interrogante ¿teme usted caerse?
        el cual es indicativo de un predictivo de hasta el 63% si la respuesta es afirmativa. \n
        Durante la realización de la prueba, el examinador debe mantenerse de pie junto al paciente/sujeto a evaluar,
        ya sea atrás o frente y a su derecha.
    </string>
    <string name="strBar1">Comer</string>
    <string name="strBar2">Capaz de utilizar cualquier instrumento necesario</string>
    <string name="strBar3">Para cortar carne, untar mantequilla, come solo</string>
    <string name="strBar4">Necesita ser alimentado por otra persona</string>
    <string name="strBar5">Lavarse - bañarse</string>
    <string name="strBar6">Capaz de lavarse entero</string>
    <string name="strBar7">Necesita ayuda o supervisión</string>
    <string name="strBar8">Vestirse</string>
    <string name="strBar9">Capaz de quitarse y ponerse la ropa</string>
    <string name="strBar10">Realizar solo la mitad de las tareas</string>
    <string name="strBar11">Necesita ayuda</string>
    <string name="strBar12">Arreglarse/aseo personal</string>
    <string name="strBar13">Realiza todas las actividades personales</string>
    <string name="strBar14">Necesita ayuda o supervisión</string>
    <string name="strBar15">Deposición</string>
    <string name="strBar16">Ningún episodio de incontinencia</string>
    <string name="strBar17">Menos de una vez por semana, uso de supositorios</string>
    <string name="strBar18">Incluye administración de enemas o supositorios</string>
    <string name="strBar19">Micción</string>
    <string name="strBar20">Ningún episodio de incontinencia</string>
    <string name="strBar21">Menos de una vez por semana, uso de supositorios</string>
    <string name="strBar22">Incluye administración de enemas o supositorios</string>
    <string name="strBar23">Ir al retrete</string>
    <string name="strBar24">Entra y sale solo, limpiarse, capaz de sentarse y levantarse</string>
    <string name="strBar25">Necesita ayuda, limpiarse solo, aun puede utilizar el retrete</string>
    <string name="strBar26">Incapaz de manejarse sin asistencia mayor</string>
    <string name="strBar27">Trasladarse sillón/cama</string>
    <string name="strBar28">Sin ayuda en todas las fases</string>
    <string name="strBar29">Incluye supervisión</string>
    <string name="strBar30">Sentado sin ayuda, pero con asistencia</string>
    <string name="strBar31">Necesita ayuda, incapaz de permanecer sentado</string>
    <string name="strBar32">Deambulación</string>
    <string name="strKat1">Lavado</string>
    <string name="strKat2">No recibe ayuda (entra y sale solo de la bañera si esta es la forma habitual de bañarse)</string>
    <string name="strKat3">Recibe ayuda en la limpieza de una sola parte de su cuerpo (espalda o piernas, por ejemplo)</string>
    <string name="strKat4">Recibe ayuda en el aseo de más de una parte de su cuerpo</string>
    <string name="strKat5">Vestido</string>
    <string name="strKat6">Toma la ropa y se viste completamente sin ayuda</string>
    <string name="strKat7">Se viste sin ayuda excepto para atarse los zapatos</string>
    <string name="strKat8">Recibe ayuda para coger la ropa y ponérsela o permanece parcialmente vestido</string>
    <string name="strKat9">Uso de retrete</string>
    <string name="strKat10">Va al retrete, se limpia y se ajusta la ropa sin ayuda puede usar bastón, andador y silla de ruedas</string>
    <string name="strKat11">Recibe ayuda para ir al retrete, limpiarse, ajustarse la ropa o en el uso nocturno del orinal</string>
    <string name="strKat12">No va al retrete</string>
    <string name="strKat13">Movilización</string>
    <string name="strKat14">Entra y sale de la cama, se sienta y se levanta sin ayuda (puede usar bastón o andador)</string>
    <string name="strKat15">Entra y sale de la cama, se sienta y se levanta con ayuda</string>
    <string name="strKat16">No se levanta de la cama</string>
    <string name="strKat17">Continencia</string>
    <string name="strKat18">Control completo de ambos esfínteres</string>
    <string name="strKat19" toolsignore="Typos">Incontinencia ocasional</string>
    <string name="strKat20">Necesita supervisión. Usa sonda vesical o es incontinente</string>
    <string name="strKat22">Sin ayuda</string>
    <string name="strKat23">Ayuda solo para cortar la carne o untar el pan</string>
    <string name="strKat24">Necesita ayuda para comer o es alimentado parcial o completamente usando sonda o fluidos intravenosos</string>
    <string name="bRes_string">Resultado</string>
    <string name="strKatz">Escala Katz</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Contraseña de la cuenta</string>
    <string name="remote_password">Contraseña de acceso a la app</string>
    <string name="action_sign_in">Iniciar Sesión</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_register">Registrarse</string>
</resources>