<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".katzActivity">

    <TextView
        android:id="@+id/tvExp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textColor="@color/secondaryColor"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/josefin_bold"
        android:gravity="center"
        android:text="@string/strKatz"
        android:textColor="@color/secondaryColor"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvExp" />

    <TextView
        android:id="@+id/tvDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/common_padding_default"
        android:fontFamily="@font/josefin_medium"
        android:text="Fecha"
        android:textAlignment="viewEnd"
        android:textColor="@color/secondaryDarkColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitle" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScroll"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="@dimen/common_padding_default"
        app:layout_constraintBottom_toTopOf="@id/logouaq"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvDate">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvKat1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/josefin_bold"
                android:text="@string/strKat1"
                android:textColor="@color/secondaryDarkColor"
                android:textSize="20sp"
                android:textStyle="bold" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginVertical="10dp"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/rbKat1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:buttonTint="@color/secondaryDarkColor"
                    android:fontFamily="@font/josefin_regular"
                    android:text="@string/strKat2" />

                <RadioButton
                    android:id="@+id/rbKat2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:buttonTint="@color/secondaryDarkColor"
                    android:fontFamily="@font/josefin_regular"

                    android:text="@string/strKat3" />

                <RadioButton
                    android:id="@+id/rbKat3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:buttonTint="@color/secondaryDarkColor"
                    android:fontFamily="@font/josefin_regular"

                    android:text="@string/strKat4" />
            </RadioGroup>

            <TextView
                android:id="@+id/tvKat2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/josefin_bold"
                android:text="@string/strKat5"
                android:textColor="@color/secondaryDarkColor"
                android:textSize="20sp"
                android:textStyle="bold" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginVertical="10dp"

                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/rbKat4"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:buttonTint="@color/secondaryDarkColor"
                    android:fontFamily="@font/josefin_regular"

                    android:text="@string/strKat6" />

                <RadioButton
                    android:id="@+id/rbKat5"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:buttonTint="@color/secondaryDarkColor"
                    android:fontFamily="@font/josefin_regular"

                    android:text="@string/strKat7" />

                <RadioButton
                    android:id="@+id/rbKat6"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:buttonTint="@color/secondaryDarkColor"
                    android:fontFamily="@font/josefin_regular"

                    android:text="@string/strKat8" />

            </RadioGroup>

            <TextView
                android:id="@+id/tvKat3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"


                android:fontFamily="@font/josefin_bold"
                android:text="@string/strKat9"
                android:textColor="@color/secondaryDarkColor"
                android:textSize="20sp"
                android:textStyle="bold" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginVertical="10dp"

                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/rbKat7"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:buttonTint="@color/secondaryDarkColor"
                    android:fontFamily="@font/josefin_regular"

                    android:text="@string/strKat10" />

                <RadioButton
                    android:id="@+id/rbKat8"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:buttonTint="@color/secondaryDarkColor"
                    android:fontFamily="@font/josefin_regular"

                    android:text="@string/strKat11" />

                <RadioButton
                    android:id="@+id/rbKat9"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:buttonTint="@color/secondaryDarkColor"
                    android:fontFamily="@font/josefin_regular"

                    android:text="@string/strKat12" />

            </RadioGroup>

            <TextView
                android:id="@+id/tvKat4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"


                android:fontFamily="@font/josefin_bold"
                android:text="@string/strKat13"
                android:textColor="@color/secondaryDarkColor"
                android:textSize="20sp"
                android:textStyle="bold" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginVertical="10dp"

                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/rbKat10"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:buttonTint="@color/secondaryDarkColor"
                    android:fontFamily="@font/josefin_regular"

                    android:text="@string/strKat14" />

                <RadioButton
                    android:id="@+id/rbKat11"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:buttonTint="@color/secondaryDarkColor"
                    android:fontFamily="@font/josefin_regular"

                    android:text="@string/strKat15" />

                <RadioButton
                    android:id="@+id/rbKat12"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:buttonTint="@color/secondaryDarkColor"
                    android:fontFamily="@font/josefin_regular"

                    android:text="@string/strKat16" />

            </RadioGroup>

            <TextView
                android:id="@+id/tvKat5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"


                android:fontFamily="@font/josefin_bold"
                android:text="@string/strKat17"
                android:textColor="@color/secondaryDarkColor"
                android:textSize="20sp"
                android:textStyle="bold" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginVertical="10dp"

                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/rbKat13"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:buttonTint="@color/secondaryDarkColor"
                    android:fontFamily="@font/josefin_regular"

                    android:text="@string/strKat18" />

                <RadioButton
                    android:id="@+id/rbKat14"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:buttonTint="@color/secondaryDarkColor"
                    android:fontFamily="@font/josefin_regular"

                    android:text="@string/strKat19" />

                <RadioButton
                    android:id="@+id/rbKat15"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:buttonTint="@color/secondaryDarkColor"
                    android:fontFamily="@font/josefin_regular"

                    android:text="@string/strKat20" />
            </RadioGroup>

            <TextView
                android:id="@+id/tvKat6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"


                android:fontFamily="@font/josefin_bold"
                android:text="@string/strKat16"
                android:textColor="@color/secondaryDarkColor"
                android:textSize="20sp"
                android:textStyle="bold" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginVertical="10dp"

                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/rbKat16"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:buttonTint="@color/secondaryDarkColor"
                    android:fontFamily="@font/josefin_regular"

                    android:text="@string/strKat22" />

                <RadioButton
                    android:id="@+id/rbKat17"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:buttonTint="@color/secondaryDarkColor"
                    android:fontFamily="@font/josefin_regular"

                    android:text="@string/strKat23" />

                <RadioButton
                    android:id="@+id/rbKat18"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:buttonTint="@color/secondaryDarkColor"
                    android:fontFamily="@font/josefin_regular"

                    android:text="@string/strKat24" />
            </RadioGroup>

            <TextView
                android:id="@+id/tvRes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/josefin_bold"
                android:gravity="center"
                android:text=""
                android:textColor="@color/black"
                android:textSize="20sp"/>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/bRes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/josefin_regular"
                android:text="@string/bRes_string" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/bSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_padding_default"
        android:src="@drawable/ic_save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nestedScroll" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/logouaq"
        android:layout_width="50dp"
        android:layout_height="@dimen/image"
        android:layout_marginStart="@dimen/common_padding_default"
        android:layout_marginBottom="@dimen/common_padding_default"
        android:src="@drawable/logouaq"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ingenieria"
        android:layout_width="50dp"
        android:layout_height="@dimen/image"
        android:layout_marginBottom="@dimen/common_padding_default"
        android:src="@drawable/ingenieria"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/enfermeria" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/enfermeria"
        android:layout_width="50dp"
        android:layout_height="@dimen/image"
        android:layout_marginEnd="@dimen/common_padding_default"
        android:layout_marginBottom="@dimen/common_padding_default"
        android:src="@drawable/enfermeria"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>