<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    tools:context=".LoginActivity"
    android:id="@+id/auth">
    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imageLogo"
        android:layout_width="match_parent"
        android:layout_height="@dimen/card_image_cover_height"
        android:layout_marginTop="@dimen/common_padding_default"
        android:src="@drawable/welcome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/userEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="96dp"
        android:layout_marginEnd="24dp"
        android:backgroundTint="@color/secondaryColor"
        android:fontFamily="@font/josefin_medium"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress"
        android:selectAllOnFocus="true"
        android:textColor="@color/secondaryDarkColor"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageLogo" />

    <EditText
        android:id="@+id/userPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:backgroundTint="@color/secondaryColor"
        android:fontFamily="@font/josefin_medium"
        android:hint="@string/prompt_password"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        android:textColor="@color/secondaryDarkColor"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/userEmail" />
    <EditText
        android:id="@+id/remotePassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:backgroundTint="@color/secondaryColor"
        android:fontFamily="@font/josefin_medium"
        android:hint="@string/remote_password"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        android:textColor="@color/secondaryDarkColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userPassword" />
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/linear_login"
        app:layout_constraintTop_toBottomOf="@id/remotePassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/bLogin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/common_padding_min"
            android:layout_weight="1"
            android:backgroundTint="@color/primaryColor"
            android:text="@string/action_sign_in"
            android:textColor="@color/primaryTextColor"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/bRegister"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/common_padding_min"
            android:layout_weight="1"
            android:backgroundTint="@color/primaryColor"
            android:text="@string/action_register"
            android:textColor="@color/primaryTextColor"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/bLogin"
            app:layout_constraintTop_toBottomOf="@+id/password" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/googleButton"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/common_padding_min"
            android:backgroundTint="@color/white"
            android:drawableStart="@mipmap/google_icon"
            android:text="Iniciar sesión con Google"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/bLogin" />
    </LinearLayout>
    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/logouaq"
        android:layout_width="50dp"
        android:layout_height="@dimen/image"
        android:layout_marginStart="@dimen/common_padding_default"
        android:layout_marginBottom="@dimen/common_padding_default"
        android:src="@drawable/logouaq"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ingenieria"
        android:layout_width="50dp"
        android:layout_height="@dimen/image"
        android:layout_marginBottom="@dimen/common_padding_default"
        android:src="@drawable/ingenieria"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/enfermeria" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/enfermeria"
        android:layout_width="50dp"
        android:layout_height="@dimen/image"
        android:layout_marginEnd="@dimen/common_padding_default"
        android:layout_marginBottom="@dimen/common_padding_default"
        android:src="@drawable/enfermeria"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>